# findit.rs

./: Cargo.toml  LICENSE  README.md  cheatsheet.md
src/: lib.rs  main.rs
