[package]
name = "findit"
version = "0.1.0"
edition = "2021"
description = "findit is a line-oriented search tool to scrounge through local text files."
license = "MIT or Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.7.24", features = ["macros"] }
colored = "2"